Add method to retrieve content as stream